This is my HTML Introduction Class

--- a/class-1/index.html
+++ b/class-1/index.html
@@ -6,18 +6,18 @@
     <title>class 1</title>
 </head>
 <body>
-    <!-- first program -->
-    <!-- Hello World! -->
-    <!-- paragraph -->
-    <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia sit voluptas necessitatibus, non culpa voluptatum. Corrupti molestias repellendus ea minima a? Quasi recusandae fuga voluptas debitis, totam cumque atque repellendus.</p> -->
-    <!-- bold and italic -->
-    <!-- <P><i><b>Pakistan Zindabad</b><i></P> -->
-    <!-- superscript and subscript  -->
-     <!-- white space nhi hoti -->
-       <!-- <p> Lorem  -->
-                  <!-- ipsum dolor sit.</p> -->
-    <!-- line brake -->
-     <!-- <p>Lorem <br>ipsum <b>dolor</b> <hr/> sit amet.</p> -->
+    first program
+    Hello World!
+    paragraph
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia sit voluptas necessitatibus, non culpa voluptatum. Corrupti molestias repellendus ea minima a? Quasi recusandae fuga voluptas debitis, totam cumque atque repellendus.</p>
+    bold and italic
+    <P><i><b>Pakistan Zindabad</b><i></P>
+    superscript and subscript 
+     white space nhi hoti
+       <p> Lorem 
+                  ipsum dolor sit.</p>
+    line brake
+     <p>Lorem <br>ipsum <b>dolor</b> <hr/> sit amet.</p>
   
 </body>
 </html>
