This is my HTMl assingment

--- a/personal_info/personal info.html
+++ b/personal_info/personal info.html
@@ -33,6 +33,13 @@
                 
             </lable>
             <br/>
+            <br/>
+            <lable>
+                Phone No :
+                <input type="text" placeholder="Enter Your Phone No"/>
+                
+            </lable>
+            <br/>
 
         </fieldset>
     </form>
